# OmicSage

./: .gitignore  LICENSE  README.md  docker-compose.yml  environment.yml  nextflow.config  pyproject.toml  requirements-ci.txt
.dev_memory/: BLOCKERS.md  CURRENT_STATUS.md  DECISIONS.md  NEXT_SESSION.md  OMICSAGE_PROJECT_CONTEXT.md  PROGRESS.md
.github/workflows/: ci.yml  docker-publish.yml
ai/: biochatter_client.py
cli/: omicsage.py
config/: schema.yaml
docker/: Dockerfile.python  Dockerfile.r
docs/: MODULE_DOCS.md
notebooks/: phase1_qc.ipynb
pipeline/: main.nf
pipeline/modules/qc/: data_report.py  ingest.py  qc.py  qc_report.py  scrna_qc.nf
pipeline/workflows/: integration.nf  scatac.nf  scrna.nf  spatial.nf
reports/: data_intake_cite.html
scripts/: download_benchmark.py  download_test_data.py
tests/: test_ingest.py  test_phase0_structure.py  test_qc.py
ui/: app.py
