[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicsage"
version = "0.1.0"
description = "Open-source AI-assisted platform for single-cell multi-omics analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "ai*", "cli*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
